--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "zork-text-adventure",
   "version": "1.0.0",
   "description": "This is a 100% authentic recreation of the original Zork 1 text adventure game.",
-  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:web": "parcel build src/index.html --dist-dir dist/web",
+    "start": "npm run build && node dist/index.js",
+    "dev": "npx tsx src/index.ts",
+    "serve": "parcel src/index.html --port 3000",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -12,21 +15,30 @@
     "lint": "eslint src/**/*.ts testing/**/*.ts",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": ["zork", "game", "data", "typescript"],
+  "keywords": [
+    "zork",
+    "game",
+    "data",
+    "typescript"
+  ],
   "author": "Claude Code",
   "license": "MIT",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.15.4",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.40.0",
     "jest": "^29.5.0",
+    "parcel": "^2.9.0",
     "ts-jest": "^29.1.0",
+    "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "fs-extra": "^11.1.0"
+    "fs-extra": "^11.1.0",
+    "loglevel": "^1.8.1"
   },
   "engines": {
     "node": ">=18.0.0",
