--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "zork-text-adventure",
   "version": "1.0.0",
+  "type": "module",
   "description": "This is a 100% authentic recreation of the original Zork 1 text adventure game.",
   "scripts": {
-    "build": "tsc",
-    "build:web": "parcel build src/index.html --dist-dir dist/web",
+    "build": "vite build",
+    "build:tsc": "tsc",
     "start": "npm run build && node dist/index.js",
-    "dev": "npx tsx src/index.ts",
-    "serve": "parcel src/index.html --port 3000",
+    "dev": "vite",
+    "dev:node": "npx tsx src/index.ts",
+    "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -24,17 +26,17 @@
   "author": "Claude Code",
   "license": "MIT",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.15.4",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.40.0",
     "jest": "^29.5.0",
-    "parcel": "^2.9.0",
+    "sass": "^1.89.2",
     "ts-jest": "^29.1.0",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^7.0.0"
   },
   "dependencies": {
     "fs-extra": "^11.1.0",
