Add AI enhancement mode with Claude integration
- Implement AI enhancement service for dynamic scene descriptions
- Add mode selection dialog for classic/enhanced gameplay
- Create API key setup flow for enhanced mode
- Update game state and persistence services for AI features
- Add context panel for displaying enhanced descriptions
- Implement environment config with secure API key handling
- Update UI components with modern styling
- Add proper TypeScript types for AI integration

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vite": "^7.0.0"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "fs-extra": "^11.1.0",
     "loglevel": "^1.8.1"
   },
